@@ -26,6 +26,7 @@ ChangeLog
 [+] * MySQL engine properly uses auto increments instead of reinventing.
 [-] * Fix escaping of field name in PostgreSQL engine.
 [-] * Better SMSD files logging.
+[-] * Added testing of SMSD files engine.
     
 20090302 - 1.23.1
 
